tests/baselines/reference/parserArrowFunctionExpression8Js.errors.txt
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/file.js(1,1): error TS2304: Cannot find name 'x'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/file.js(1,20): error TS2304: Cannot find name 'z'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/file.js(1,20): error TS8010: Type annotations can only be used in TypeScript files.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/file.js(1,28): error TS18004: No value exists in scope for the shorthand property 'z'. Either declare one or provide an initializer.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/file.js(2,1): error TS1005: ':' expected.


==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/file.js (5 errors) ====
    x ? y => ({ y }) : z => ({ z })
    ~
!!! error TS2304: Cannot find name 'x'.
                       ~
!!! error TS2304: Cannot find name 'z'.
                       ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                               ~
!!! error TS18004: No value exists in scope for the shorthand property 'z'. Either declare one or provide an initializer.
    
    
!!! error TS1005: ':' expected.